# pipeline-telemetry

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  dev_requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
.venv_pt/: pyvenv.cfg
ci/: bootstrap.py  requirements.txt
docs/: adding telemetry.rst  conf.py  decorators.rst  index.rst  installation.rst  process_type.rst  readme.rst  requirements.txt  storage class.rst  storage_class.rst  telemetry aggregation.rst  telemetry counters.rst  telemetry mixin.rst  telemetry object.rst  usage.rst
docs/reference/: index.rst  pipeline_telemetry.rst
src/pipeline_telemetry/: __init__.py  __main__.py  cli.py  decorator.py  helper.py  main.py  mixin.py  storage.py  telemetry_model.py
src/pipeline_telemetry/aggregator/: __init__.py  aggregator.py  helper.py  mongo_aggregator.py
src/pipeline_telemetry/data_classes/: __init__.py  telemetry_models.py
src/pipeline_telemetry/data_classes.py/: telemetry_models.py
src/pipeline_telemetry/settings/: __init__.py  data_class.py  date_ranges.py  errors.py  exceptions.py  process_type.py  settings.py  telemetry_errors.py
src/pipeline_telemetry/storage/: __init__.py  generic.py  memory.py  mongo.py  mongo_bunnet.py  mongo_connection.py
src/pipeline_telemetry/validators/: __init__.py  abstract_validator_instruction.py  dict_validator.py  entries_have_key.py  has_key.py  validate_entries.py
tests/: test_add_telemetry.py  test_data.py  test_decorator.py  test_helpers.py  test_mixin.py  test_pipeline_telemetry.py  test_process_type_meta.py  test_process_types.py  test_settings_module.py  test_storage.py  test_telemetry.py  test_telemetry_class_methods.py  test_telemetry_counter.py
tests/data/: test_data.py
tests/test_aggregator/: test_aggregator.py  test_aggregator_data.py  test_daily_aggregator.py  test_helper.py  test_mongo_aggregator.py  test_partial_aggregator.py
tests/test_integration/: test_int_telemetry.py  test_integration_data.py
tests/test_settings/: test_date_time_ranges.py  test_exceptions.py
tests/test_storage/: test_mongo_storage.py  test_sqllite_storage.py  test_storage.py  test_storage_data.py
tests/test_telemetry_models/: test_telemetry_class.py  test_telemetry_data.py  test_telemetry_model.py
tests/test_validators/: test_dict_validator.py  test_entries_have_key.py  test_has_key_instruction.py  test_validate_entries.py
