[metadata]
name = pipeline-telemetry
version = 1.0.0
description = Measure your data pipelines with easy to use telemetry logic
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/markdown
url = https://github.com/MaartendeRuyter/pipeline-telemetry
author = Maarten de Ruyter
author_email = "Maarten de Ruyter" <maarten@geodatagarden.com>
license = GNU
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Intended Audience :: Developers   
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires = 
    error-manager
    mongoengine
    jmespath

[options.packages.find]
where = src
exclude =
    test*

######################
# Tool configuration #
######################

[mypy]
python_version = 3.12
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = tests
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = pipeline_telemetry
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/pipeline_telemetry
    */site-packages/pipeline_telemetry

[tox:tox]
envlist = py310, py311, py312
isolated_build = True

[testenv]
deps =
    error-manager
    mongoengine
    freezegun
    jmespath
    pymongo>=4.7
    pytest
    pytest-cov
    pytest-mock

commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy==1.10.0
    pytest==8.2.0

commands =
    mypy --ignore-missing-imports {posargs:src}

[testenv:format]
skip_install = True
deps =
    ruff>=0.4.3
    isort>=5.13
commands =
    isort src tests 
    ruff format src tests

[testenv:lint]
skip_install = True
deps =
    flake8==7.0.0
    flake8-bugbear==24.4.26
commands =
    flake8 {posargs:src tests}

[testenv:docs]
skip_install = True
deps =
    sphinx
    sphinx-rtd-theme
    mongoengine
    error-manager
allowlist_externals = sphinx-build
commands =
    sphinx-build -n -W --keep-going -b html docs/ docs/_build/